# tcc_mba_icmc

./: .gitattributes  .gitignore  Makefile  README.md  pyproject.toml  temaTCC.json
data/: data.csv  data_curated.csv
models/: Modelos 1.ipynb  Modelos1.ipynb  Modelos1_Oversampling.ipynb  Modelos1_Under+Over.ipynb  Modelos1_Undersampling.ipynb  gera_grafico_classes.py  matriz_confusao.py  matriz_confussao_porcentagem.py
notebooks/: Analise_exploratoria_Prepara_dados_modelos.ipynb  analise_exploratoria.ipynb  matriz_confusao.py
reports/: paleta_cores.json
